# SecureRequest-Gateway

./: .gitignore
app/: CMakeLists.txt  Fluxograma.md
app/Controllers/: receiveJson.cpp
app/Controllers/receiveJson/: receiveJson.cpp  receiveJson.hpp
app/Routes/: Routes.hpp  receiveRequests.cpp
app/Routes/receiveJson/: receiveJson.cpp  receiveJson.hpp
app/Routes/requestAccess/: requestAccess.cpp  requestAccess.hpp
